change filter_id to quest_id
